@@ -18,6 +18,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 
 #include <stdio.h>
 #include <string.h>
+#include "sdld.h"
 #include "aslink.h"
 
 /*)Module	lks19.c
